Bug 331361 - warning of touchpad active settings don't match saved settings
Summary: warning of touchpad active settings don't match saved settings
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_touchpad (other bugs)
Version First Reported In: 5.17.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL: http://screencloud.net/img/screenshot...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-21 03:55 UTC by GSC
Modified: 2020-01-22 21:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description GSC 2014-02-21 03:55:50 UTC
Everytime I open the touchpad setting in kde system settings, I get this message. 

The touchpad is alps, which driver I installed manually, if it' s related.

Reproducible: Always

Steps to Reproduce:
1. open kde system settings
2. input devices
3. touchpad 
Actual Results:  
warning of  touchpad active settings don't match saved settings

Expected Results:  
No warning.
Comment 1 Alexander Mezin 2014-02-26 15:26:39 UTC
Does the KCM work at all? For example, if you disable/enable something, does the change actually happen (except the "Enable/Disable Touchpad" tab)?

Does this problem depend on how you open the KCM (kcmshell4, "System Settings", applet context menu)?

And could you attach output of "synclient -l" here?
Comment 2 Alexander Mezin 2014-02-26 15:35:46 UTC
And what do you mean by "installed driver manually"? This app is currently only for xf86-input-synaptics (it shouldn't work with other drivers)
Comment 3 GSC 2014-02-27 03:46:13 UTC
I confirm the crash bug is fixed.
It works well. Enable/disable works. This warning message doesn' t depend on how I open the KCM.
$ synclient -l                                                               
Parameter settings:
    LeftEdge                = 204
    RightEdge               = 1156
    TopEdge                 = 99
    BottomEdge              = 561
    FingerLow               = 11
    FingerHigh              = 16
    MaxTapTime              = 180
    MaxTapMove              = 20
    MaxDoubleTapTime        = 180
    SingleTapTimeout        = 248
    ClickTime               = 100
    EmulateMidButtonTime    = 75
    EmulateTwoFingerMinZ    = 141
    EmulateTwoFingerMinW    = 7
    VertScrollDelta         = -10
    HorizScrollDelta        = -10
    VertEdgeScroll          = 1
    HorizEdgeScroll         = 1
    CornerCoasting          = 0
    VertTwoFingerScroll     = 1
    HorizTwoFingerScroll    = 1
    MinSpeed                = 1
    MaxSpeed                = 1.75
    AccelFactor             = 0.1324                                                         
    TouchpadOff             = 2                                                              
    LockedDrags             = 0                                                              
    LockedDragTimeout       = 5000                                                           
    RTCornerButton          = 0                                                              
    RBCornerButton          = 0                                                              
    LTCornerButton          = 0                                                              
    LBCornerButton          = 0                                                              
    TapButton1              = 1                                                              
    TapButton2              = 3                                                              
    TapButton3              = 3                                                              
    ClickFinger1            = 1
    ClickFinger2            = 1
    ClickFinger3            = 1
    CircularScrolling       = 0
    CircScrollDelta         = 0.785398
    CircScrollTrigger       = 0
    PalmDetect              = 0
    PalmMinWidth            = 10
    PalmMinZ                = 100
    CoastingSpeed           = 0.1
    CoastingFriction        = 50
    PressureMotionMinZ      = 15
    PressureMotionMaxZ      = 80
    PressureMotionMinFactor = 1
    PressureMotionMaxFactor = 1
    GrabEventDevice         = 1
    TapAndDragGesture       = 1
    AreaLeftEdge            = 0
    AreaRightEdge           = 0
    AreaTopEdge             = 0
    AreaBottomEdge          = 0
    HorizHysteresis         = 7
    VertHysteresis          = 7
    ClickPad                = 0

By installing driver manually I mean I use an old version of https://aur.archlinux.org/packages/psmouse-alps-driver/, because newer version doesn' t work well for me.
Comment 4 Alexander Mezin 2014-02-27 07:46:46 UTC
(In reply to comment #3)
> It works well.
To be sure, could you disable horizontal and vertical edge scrolling using KCM, and post "synclient -l" output again?
Comment 5 GSC 2014-02-27 08:18:36 UTC
$ synclient -l
Parameter settings:
    LeftEdge                = 204
    RightEdge               = 1156
    TopEdge                 = 99
    BottomEdge              = 561
    FingerLow               = 11
    FingerHigh              = 16
    MaxTapTime              = 180
    MaxTapMove              = 20
    MaxDoubleTapTime        = 180
    SingleTapTimeout        = 248
    ClickTime               = 100
    EmulateMidButtonTime    = 75
    EmulateTwoFingerMinZ    = 141
    EmulateTwoFingerMinW    = 7
    VertScrollDelta         = -10
    HorizScrollDelta        = -10
    VertEdgeScroll          = 0                                                              
    HorizEdgeScroll         = 0                                                              
    CornerCoasting          = 0                                                              
    VertTwoFingerScroll     = 1                                                              
    HorizTwoFingerScroll    = 1                                                              
    MinSpeed                = 1                                                              
    MaxSpeed                = 1.75                                                           
    AccelFactor             = 0.1324                                                         
    TouchpadOff             = 2                                                              
    LockedDrags             = 0                                                              
    LockedDragTimeout       = 5000                                                           
    RTCornerButton          = 0
    RBCornerButton          = 0
    LTCornerButton          = 0
    LBCornerButton          = 0
    TapButton1              = 1
    TapButton2              = 3
    TapButton3              = 3
    ClickFinger1            = 1
    ClickFinger2            = 1
    ClickFinger3            = 1
    CircularScrolling       = 0
    CircScrollDelta         = 0.785398
    CircScrollTrigger       = 0
    PalmDetect              = 0
    PalmMinWidth            = 10
    PalmMinZ                = 100
    CoastingSpeed           = 0.1
    CoastingFriction        = 50
    PressureMotionMinZ      = 15
    PressureMotionMaxZ      = 80
    PressureMotionMinFactor = 1
    PressureMotionMaxFactor = 1
    GrabEventDevice         = 1
    TapAndDragGesture       = 1
    AreaLeftEdge            = 0
    AreaRightEdge           = 0
    AreaTopEdge             = 0
    AreaBottomEdge          = 0
    HorizHysteresis         = 7
    VertHysteresis          = 7
    ClickPad                = 0
Comment 6 Alexander Mezin 2014-02-27 09:56:33 UTC
And when you open KCM after that, you see the warning again, right?
Comment 7 Alexander Mezin 2014-02-27 11:56:51 UTC
Recently I've added some debug output.
Could you enable "kcmshell" in kdebugdialog, and post output of "kcmshell4 kcm_touchpad" here?
Comment 8 GSC 2014-02-28 03:48:18 UTC
Yes, I see the warning again.

$ kcmshell4 kcm_touchpad
kcmshell(12656)/kdecore (KSycoca) KSycocaPrivate::openDatabase: Trying to open ksycoca from "/var/tmp/kdecache-gsc/ksycoca4"
kcmshell(12656)/kutils (KCMultiDialog) KCMultiDialog::addModule: "Touchpad"
kcmshell(12656)/kutils (KCModuleProxy) KCModuleProxyPrivate::loadModule: Module already loaded, loading KCMError
kcmshell(12656)/kutils (KCModuleProxy) KCModuleProxyPrivate::loadModule: Calling KCModuleProxy's DBus interface for fetching the name failed.
kcmshell(12656)/kutils (KCModuleProxy) KCModuleProxyPrivate::loadModule: Module not already loaded, loading module  "Touchpad"  from library  "kded_touchpad"  using symbol  "kded_touchpad"
kcmshell(12656)/kutils (KCMultiDialog) KCMultiDialog::addModule: adding KCM  "Touchpad"  at the top level
kcmshell(12656)/kutils (KCMultiDialog) KCMultiDialogPrivate::_k_slotCurrentPageChanged:
kcmshell(12656)/kutils (KCMultiDialog) KCMultiDialogPrivate::_k_clientChanged:
kcmshell(12656)/kutils (KCMultiDialog) KCMultiDialogPrivate::_k_clientChanged:
kcmshell(12656) CustomConfigDialogManager::compareWidgetProperties: Config mismatch: "kcfg_VertScrollDelta" QVariant(double, 10) QVariant(double, -10)
kcmshell(12656) CustomConfigDialogManager::compareWidgetProperties: Config mismatch: "kcfg_HorizScrollDelta" QVariant(double, 10) QVariant(double, -10)
kcmshell(12656)/kutils (KCMultiDialog) KCMultiDialogPrivate::_k_clientChanged:
Comment 9 Alexander Mezin 2014-02-28 19:21:40 UTC
Git commit 9a6fb10834e3842af5a4ae432f68f02f7334b75e by Alexander Mezin.
Committed on 28/02/2014 at 19:15.
Pushed by alexandermezin into branch 'master'.

Xlib backend: remove invalid checks in getConfig()

M  +8    -13   src/backends/x11/xlibbackend.cpp

http://commits.kde.org/kcm-touchpad/9a6fb10834e3842af5a4ae432f68f02f7334b75e
Comment 10 GSC 2014-03-01 06:26:09 UTC
Confirm it is fixed. Thanks. Hope make a new release.