Xlib backend: remove invalid checks in getConfig()

BUG: 331361